xorg-proto/xcb-proto: version 1.9

--- a/xorg-proto/xcb-proto/HISTORY
+++ b/xorg-proto/xcb-proto/HISTORY
@@ -1,3 +1,7 @@
+2013-11-10 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: 1.9
+	* PRE_BUILD: fixed the fix :)
+
 2013-06-20 Treeve Jelbert <treeve$sourcemage.org>
 	* DEPENDS: python => PYTHON
 	* PRE_BUILD: fix detection of python-3.3
