--- a/xorg-lib/libxcb/HISTORY
+++ b/xorg-lib/libxcb/HISTORY
@@ -1,3 +1,7 @@
+2013-11-10 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: 1.9
+	* PRE_BUILD: fixed the fix :)
+
 2013-06-20 Treeve Jelbert <treeve@sourcemage.org>
 	* PRE_BUILD: added, fix build with python-3.3
 
