--- a/utils/syslog-ng/HISTORY
+++ b/utils/syslog-ng/HISTORY
@@ -1,3 +1,6 @@
+2013-11-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.4.5
+
 2013-07-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.4.2
 
