--- a/shell-term-fm/vifm/HISTORY
+++ b/shell-term-fm/vifm/HISTORY
@@ -1,3 +1,6 @@
+2013-11-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.7.6
+
 2013-05-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.7.5
 
