x11/merkaartor: add bug fixes from upstream

--- a/x11/merkaartor/HISTORY
+++ b/x11/merkaartor/HISTORY
@@ -1,3 +1,12 @@
+2013-11-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* PRE_BUILD, 0002-FIX-Assert-width-0-with-wireframe-with-style.patch,
+	  0003-FIX-secondary-road-simple-color.patch,
+	  0004-FIX-libgps20-build-fix-from-Dirk-Stocker.patch,
+	  0005-FIX-openSUSE-build.patch,
+	  0006-FIX-French-cadastre-parsing-issue-fixes-3334.patch,
+	  0007-FIX-Virtual-nodes-not-highlighted-on-hover-fixes-333.patch,
+	  0008-FIX-GDAL-crash.patch: add several bug fixes from upstream
+
 2013-05-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: added dependencies on boost, gdal, proj, desktop-file-utils,
 	  added sub-dependency on WEBKIT for qt4, added optional dependencies
