science/gdal: version 1.9.2

--- a/science/gdal/HISTORY
+++ b/science/gdal/HISTORY
@@ -1,3 +1,6 @@
+2013-11-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.9.2
+
 2012-06-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.9.1
 
