--- a/lxde/menu-cache/HISTORY
+++ b/lxde/menu-cache/HISTORY
@@ -1,3 +1,6 @@
+2013-11-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.5.1
+
 2012-12-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.4.1
 
