shell-term-fm/pcmanfm: version 1.1.2

--- a/shell-term-fm/pcmanfm/HISTORY
+++ b/shell-term-fm/pcmanfm/HISTORY
@@ -1,3 +1,6 @@
+2013-11-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.1.2
+
 2013-02-23 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.1.0
 	* PRE_BUILD: fix includes
