--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,7 @@
+2013-11-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.6 (devel)
+	* BUILD: build fix for gcc-4.8.x
+
 2013-09-13 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated devel to 1.7.2
 
