--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-11-10  Treeve Jelbert <treeve@sourcemage.org>
+	* qt5/qbs: new spell, build system for qt
+
 2013-11-06 Ismael Luceno <ismael@sourcemage.org>
 	* crypto/sshpass: new spell, Non-interactive ssh password auth
 
