--- a/devel/python/HISTORY
+++ b/devel/python/HISTORY
@@ -1,3 +1,7 @@
+2013-11-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.7.6
+	* python.gpg: add 18ADD4FF Benjamin Peterson <benjamin@python.org>
+
 2013-08-15 Eric Sandall <sandalle@sourcemage.org>
 	* UP_TRIGGERS: Trigger check_self on pygobject3
 
