--- a/video-libs/libdvbpsi/HISTORY
+++ b/video-libs/libdvbpsi/HISTORY
@@ -1,3 +1,6 @@
+2013-11-11 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.2
+
 2013-10-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.1
 
