--- a/perl-cpan/dbi/HISTORY
+++ b/perl-cpan/dbi/HISTORY
@@ -1,3 +1,6 @@
+2013-11-11  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.630
+
 2013-09-07  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.628
 
