--- a/graphics-libs/libraw/HISTORY
+++ b/graphics-libs/libraw/HISTORY
@@ -1,3 +1,6 @@
+2013-11-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.15.4
+
 2012-04-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.14.6
 
