--- a/graphics-libs/opencv/HISTORY
+++ b/graphics-libs/opencv/HISTORY
@@ -1,3 +1,6 @@
+2013-11-12 Treeve Jelbert <treeve@sourcemage.org> 
+	* DETAILS: version 2.4.7
+
 2013-10-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* graphics-libs/opencv: version 2.4.6.2, TMPFS=off
 
