--- a/libs/libquvi-scripts/HISTORY
+++ b/libs/libquvi-scripts/HISTORY
@@ -1,2 +1,5 @@
+2013-11-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.4.20
+
 2013-09-29 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS, DEPENDS: spell created, version 0.4.18
