--- a/utils/syslog-ng/HISTORY
+++ b/utils/syslog-ng/HISTORY
@@ -1,3 +1,8 @@
+2013-11-13 David C. Haley <khoralin@gmail.com>
+	* DETAILS: version 3.51
+	  SOURCE_HASH SHA512:WORKS_FOR_ME -> SHA1:UPSTREAM_HASH
+	* balabit.gpg: removed
+
 2013-11-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.4.5
 
