--- a/utils/eventlog/HISTORY
+++ b/utils/eventlog/HISTORY
@@ -1,3 +1,7 @@
+2013-11-13 David C. Haley <khoralin@gmail.com>
+	* DETAILS: version 2.20
+	  Changed SOURCE_HASH SHA512:WORKS_FOR_ME -> SHA1:UPSTREAM_HASH
+
 2011-10-14 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap (scripted)
 
