--- a/python-pypi/setuptools/HISTORY
+++ b/python-pypi/setuptools/HISTORY
@@ -1,3 +1,6 @@
+2013-11-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.2
+
 2013-11-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.7
 
