--- a/video/vlc/HISTORY
+++ b/video/vlc/HISTORY
@@ -1,3 +1,7 @@
+2013-11-14 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.1.1
+	* PRE_BUILD, lua.patch, lua-scripts.patch: lua patches removed
+
 2013-10-27 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: depend on stable branch of ffmpeg if using ffmpeg
 
