deprecate qt5/qt3d

--- a/ChangeLog
+++ b/ChangeLog
@@ -35,6 +35,9 @@
 2013-11-17 Robin Cook <rcook@wyrms.net>
 	* libs/iec16022: new spell, library for DataMatrix barcodes
 
+2013-11-17  Treeve Jelbert <treeve@sourcemage.org>
+	* qt5/qt3d: spell deprecated 
+
 2013-11-10  Treeve Jelbert <treeve@sourcemage.org>
 	* qt5/qbs: new spell, build system for qt
 
