deprecate qt5/qtsystems

--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,9 @@
 	* libs/iec16022: new spell, library for DataMatrix barcodes
 
 2013-11-17  Treeve Jelbert <treeve@sourcemage.org>
+	* qt5/qtsystems: spell deprecated 
+
+2013-11-17  Treeve Jelbert <treeve@sourcemage.org>
 	* qt5/qtpim: spell deprecated 
 
 2013-11-17  Treeve Jelbert <treeve@sourcemage.org>
