deprecate qt5/qtjsbackend

--- a/qt5/qtjsbackend/HISTORY
+++ b/qt5/qtjsbackend/HISTORY
@@ -1,17 +1,4 @@
-2013-09-03  Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 5.1.1
-
-2013-07-07  Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 5.1.0
-
-2013-04-12  Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 5.0.2
-
-2013-02-12  Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 5.0.1
-	* PRE_BUILD: added, support multiple versions of python
-
-2012-09-01  Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 5.0.0-beta1
-	  spell created
-
+2013-11-17  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0
+	  PATCHLEVEL=9999
+	  spell deprecated 
