--- a/qt5/qtbase/HISTORY
+++ b/qt5/qtbase/HISTORY
@@ -1,3 +1,6 @@
+2013-11-17  Treeve Jelbert <treeve@sourcemage.org>
+	* CONFIGURE: remove demos, enable gif
+
 2013-09-03  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.1.1
 
