--- a/crypto/libssh/HISTORY
+++ b/crypto/libssh/HISTORY
@@ -1,3 +1,6 @@
+2013-11-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.5.5
+
 2013-02-11 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.5.4
 	  SECURITY_PATCH++, fixes CVE-2013-0176
