--- a/graphics-libs/libpng/HISTORY
+++ b/graphics-libs/libpng/HISTORY
@@ -1,3 +1,6 @@
+2013-11-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.6.7
+
 2013-10-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6.6
 
