--- a/utils/util-linux/HISTORY
+++ b/utils/util-linux/HISTORY
@@ -1,3 +1,6 @@
+2013-11-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version to 2.24
+
 2013-08-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version to 2.23.2
 
