--- a/utils/barcode/HISTORY
+++ b/utils/barcode/HISTORY
@@ -1,3 +1,6 @@
+2013-11-17 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 0.99
+
 2006-06-28 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Removed BUILD_API=2, set grimoire-wide
 
