--- a/printer/glabels/HISTORY
+++ b/printer/glabels/HISTORY
@@ -1,3 +1,7 @@
+2013-11-17 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated to 3.2.0
+	* DEPENDS: updated depends
+
 2010-04-22 Vasil Yonkov <spirtbrat@sourcemage.org>
 	* DEPENDS: added intltool, added optional gtk-doc, evolution-data-server
 
