--- a/libs/nspr/HISTORY
+++ b/libs/nspr/HISTORY
@@ -1,3 +1,6 @@
+2013-11-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 4.10.2
+
 2013-10-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.10.1
 
