http/firefox: version 25.0.1

--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2013-11-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 25.0.1, SECURITY_PATCH++
+
 2013-10-29 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 25.0, SECURITY_PATCH=68
 
