--- a/collab/openldap/HISTORY
+++ b/collab/openldap/HISTORY
@@ -1,3 +1,6 @@
+2013-11-18 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.4.38
+
 2013-10-29 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.4.37
 
