texlive: do not install luatex fonts without lua

--- a/latex/texlive/INSTALL
+++ b/latex/texlive/INSTALL
@@ -11,6 +11,11 @@ ln -svf mf ${INSTALL_ROOT}/usr/bin/mf-nowin &&
 # don't create aleph files
 sed -i -e '/aleph/d' ${INSTALL_ROOT}/usr/share/texmf/web2c/fmtutil.cnf &&
 
+# remove luatex stuff from config file if not enabled
+if ! depends_is_enabled $SPELL lua51; then
+  sed -i -e '/luatex/d' ${INSTALL_ROOT}/usr/share/texmf/web2c/fmtutil.cnf
+fi &&
+
 # create symlinks to latex, pdflatex, etc
 ${INSTALL_ROOT}/usr/bin/texlinks -f ${INSTALL_ROOT}/usr/share/texmf/web2c/fmtutil.cnf ${INSTALL_ROOT}/usr/bin &&
 
