--- a/latex/texlive/HISTORY
+++ b/latex/texlive/HISTORY
@@ -1,3 +1,7 @@
+2013-11-18 Remko van der Vossen <wich@sourcemage.org>
+	* INSTALL: do not try to install luatex fonts if lua dependency is not
+	  enabled.
+
 2013-06-08 Thomas Orgis <sobukus@sourcemage.org>
 	* INSTALL: hack to install a copy of TeXLive::TLUtils to make updmap work
 	* BUILD: Do not disable gsftopk; who else provides it?
