--- a/doc/dvipdfmx/HISTORY
+++ b/doc/dvipdfmx/HISTORY
@@ -1,3 +1,6 @@
+2013-11-18 Remko van der Vossen <wich@sourcemage.org>
+	* DETAILS: add alternative download location
+
 2012-12-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 20110311
 
