--- a/xorg-lib/pixman/HISTORY
+++ b/xorg-lib/pixman/HISTORY
@@ -1,3 +1,6 @@
+2013-11-18 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.32.4
+
 2013-11-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.32.2
 
