--- a/science/xaos/HISTORY
+++ b/science/xaos/HISTORY
@@ -1,3 +1,6 @@
+2013-11-19 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.6
+
 2009-07-20 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.5, XaoS -> xaos, fixed SHORT
 
