--- a/devel/python3/HISTORY
+++ b/devel/python3/HISTORY
@@ -1,3 +1,6 @@
+2013-11-19 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.3.3
+
 2013-06-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.3.2
 
