--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,10 +1,11 @@
+2013-11-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 1.14.4
+	  SECURITY_PATCH++ fixes CVE-2013-4396
+
 2013-10-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* PRE_BUILD, 0001-fix-buffer-overflow.patch: remove obsolete
 	  patch that prevents PRE_BUILD from succeeding
 	* gl_select.patch: renew patch so PRE_BUILD succeeds
-
-2013-09-17 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: 1.14.3
 
 2013-07-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: udev => UDEV
