loop-AES.gpg: added 8132F189 public key (Jari Ruusu (2013) <jariruusu@users.sourceforge.net>)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-11-20 Vlad Glagolev <stealth@sourcemage.org>
+	* loop-AES.gpg: added 8132F189 public key (Jari Ruusu (2013)
+	  <jariruusu@users.sourceforge.net>)
+
 2013-11-17 Robin Cook <rcook@wyrms.net>
 	* libs/iec16022: new spell, library for DataMatrix barcodes
 
