--- a/http/midori/HISTORY
+++ b/http/midori/HISTORY
@@ -1,3 +1,7 @@
+2013-11-20 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.5.6
+	* BUILD, INSTALL: waf -> cmake
+
 2013-08-15 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.5.5, SOURCE and SOURCE_URL[0] updated
 
