util-linux: => 2.24 (aes); removed conflicts with simpleinit-msb/shadow

--- a/utils/util-linux/HISTORY
+++ b/utils/util-linux/HISTORY
@@ -1,3 +1,11 @@
+2013-11-20 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated aes version to 2.24; updated aes patch to 20131026
+	* BUILD: readability++; disable nologin (provided by shadow); disable
+	  last and mesg (provided by simpleinit-msb)
+	* PRE_BUILD: verify aes patch source
+	* DEPENDS: fixed deprecated linux-pam flags; added python and libcap-ng
+	  optional dependencies; added check for automake
+
 2013-11-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version to 2.24
 
