--- a/shell-term-fm/rdesktop/HISTORY
+++ b/shell-term-fm/rdesktop/HISTORY
@@ -1,3 +1,6 @@
+2013-11-20 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.8.1
+
 2013-06-24 Remko van der Vossen <wich@sourcemage.org>
 	* DETAILS: Proper download link
 
