fix builds involving python3.3

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-11-20  Treeve Jelbert <treeve@sourcemage.org>
+	* FUNCTIONS: fix builds involving python3.3
+
 2013-11-20 Vlad Glagolev <stealth@sourcemage.org>
 	* loop-AES.gpg: added 8132F189 public key (Jari Ruusu (2013)
 	  <jariruusu@users.sourceforge.net>)
