--- a/python-pypi/pyopenssl/HISTORY
+++ b/python-pypi/pyopenssl/HISTORY
@@ -1,3 +1,6 @@
+2013-11-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: use PYTHON
+
 2013-09-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.13.1
 	  SECURITY_PATCH=1, fixes CVE-2013-4314
