--- a/python-pypi/pybindgen/HISTORY
+++ b/python-pypi/pybindgen/HISTORY
@@ -1,3 +1,6 @@
+2013-11-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: PYTHON3
+
 2013-06-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.16.0
 	  spell created
