--- a/python-pypi/tempita/HISTORY
+++ b/python-pypi/tempita/HISTORY
@@ -1,3 +1,6 @@
+2013-11-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: PYTHON
+
 2011-12-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.5.1
 
