--- a/python-pypi/webob/HISTORY
+++ b/python-pypi/webob/HISTORY
@@ -1,3 +1,6 @@
+2013-11-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: PYTHON
+
 2012-12-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2.3
 
