--- a/python-pypi/babel/HISTORY
+++ b/python-pypi/babel/HISTORY
@@ -1,3 +1,6 @@
+2013-11-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: PYTHON
+
 2011-05-23 Sukneet Basuta <sukneet@sourcemage.org>
 	* DEPENDS: updated setuptools dependency to SETUPTOOLS provider
 
