webhelpers - python3 support

--- a/python-pypi/webhelpers/HISTORY
+++ b/python-pypi/webhelpers/HISTORY
@@ -1,3 +1,6 @@
+2013-11-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: PYTHON
+
 2012-02-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.3
 
