--- a/python-pypi/babel/HISTORY
+++ b/python-pypi/babel/HISTORY
@@ -1,4 +1,5 @@
 2013-11-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3, new website & url
 	* DEPENDS: PYTHON
 
 2011-05-23 Sukneet Basuta <sukneet@sourcemage.org>
