--- a/python-pypi/pyutil/HISTORY
+++ b/python-pypi/pyutil/HISTORY
@@ -1,3 +1,6 @@
+2013-11-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAINS: version 1,9,7
+
 2012-12-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.9.4
 
