--- a/python-pypi/chardet/HISTORY
+++ b/python-pypi/chardet/HISTORY
@@ -1,3 +1,6 @@
+2013-11-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: PYTHON
+
 2013-02-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.1.1
 	 new website & url
