--- a/python-pypi/numpy/HISTORY
+++ b/python-pypi/numpy/HISTORY
@@ -1,3 +1,6 @@
+2013-11-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.8.0
+
 2013-04-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7.1
 	* DEPENDS: fix python3 usage
