--- a/http/nginx/HISTORY
+++ b/http/nginx/HISTORY
@@ -1,3 +1,8 @@
+2013-11-21 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: SECURITY_PATCH++
+	* PRE_BUILD: apply patch
+	* space.patch: added, to fix CVE-2013-4547
+
 2012-08-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS, BUILD, PRE{PARE,_BUILD}: added dav_ext module
 	* CONFIGURE: generic dav module is required for dav_ext module
