--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 2013-11-20  Treeve Jelbert <treeve@sourcemage.org>
-	* FUNCTIONS: fix builds involving python3.3
+	* FUNCTIONS,python-pypi/PY_DEPENDS: fix builds involving python3.3
 
 2013-11-20 Vlad Glagolev <stealth@sourcemage.org>
 	* loop-AES.gpg: added 8132F189 public key (Jari Ruusu (2013)
