--- a/libs/libxml2/HISTORY
+++ b/libs/libxml2/HISTORY
@@ -1,3 +1,6 @@
+2013-11-21 Treeve Jelbert <treeve@sourcemage.org>
+	* BUILD: deleted, python usege is solved in FUNCTIONS
+
 2013-07-25 Treeve Jelbert <treeve@sourcemage.org>
 	* SUB_DEPENDS, PRE_SUB_DEPENDS: adjust to python3
 	* BUILD: added, fix detection of python3
