st: Add missing dependencies

--- a/shell-term-fm/st/HISTORY
+++ b/shell-term-fm/st/HISTORY
@@ -1,3 +1,6 @@
+2013-11-21 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Add missing dependencies
+
 2013-05-18 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.4.1
 
