libx11: Disable i18n option, breaks XIM + UTF-8

--- a/xorg-lib/libx11/HISTORY
+++ b/xorg-lib/libx11/HISTORY
@@ -1,3 +1,6 @@
+2013-11-22 Ismael Luceno <ismael@sourcemage.org>
+	* CONFIGURE: Disable i18n option, breaks XIM + UTF-8
+
 2011-03-18 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.4.2
 
