--- a/xorg-data/xkeyboard-config/HISTORY
+++ b/xorg-data/xkeyboard-config/HISTORY
@@ -1,3 +1,7 @@
+2013-11-23 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 2.3
+
 2011-08-19 Bor Kraljič <pyrobor@ver.si>
 	* BUILD: commented unrecognized option (issue #30)
 
