--- a/xorg-app/xkbcomp/HISTORY
+++ b/xorg-app/xkbcomp/HISTORY
@@ -1,3 +1,6 @@
+2013-11-23 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.2.4
+
 2012-02-01 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Depends on libpthread-stubs
 
