--- a/libs/libdrm/HISTORY
+++ b/libs/libdrm/HISTORY
@@ -1,3 +1,6 @@
+2013-11-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.4.49
+
 2013-11-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.4.48
 
