--- a/xorg-proto/xproto/HISTORY
+++ b/xorg-proto/xproto/HISTORY
@@ -1,3 +1,6 @@
+2014-11-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 7.0.25
+
 2012-04-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 7.0.24
 
