--- a/xorg-lib/libxkbcommon/HISTORY
+++ b/xorg-lib/libxkbcommon/HISTORY
@@ -1,3 +1,7 @@
+2013-11-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.3.2
+	* DEPENDS: adjust
+
 2013-06-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.3.1
 	  new website & url
