tevent: Removed PRE_BUILD, I do not even know, but it does not work; no files

--- a/libs/tevent/HISTORY
+++ b/libs/tevent/HISTORY
@@ -1,3 +1,6 @@
+2013-11-23 Eric Sandall <sandalle@sourcemage.org>
+	* PRE_BUILD: Removed, I don't even know, but it doesn't work (no files)
+
 2013-02-08 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: remove git version, add stable 0.9.17
 	  git version removed because it checks out entire samba4 and it was broken
