--- a/net/samba4/HISTORY
+++ b/net/samba4/HISTORY
@@ -1,3 +1,7 @@
+2013-11-23 Eric Sandall <sandalle@sourcemage.org>
+	* PRE_BUILD: Fixed stable to just use default_pre_build, the other way leaves no files
+	* DEPENDS: Fixed --with-sendfile-support syntax
+
 2013-02-08 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: stable => 4.0.2
 	  updated SOURCE_URLs
