cpuminer 2.3.2, pooler's fork

--- a/net/cpuminer/HISTORY
+++ b/net/cpuminer/HISTORY
@@ -1,3 +1,6 @@
+2013-11-24 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Switched to pooler's fork, version 2.3.2
+
 2011-05-26 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS, DETAILS: spell created
 
