--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-11-24  Treeve Jelbert <treeve@sourcemage.org>
+	* FUNCTIONS: fix for python2 usage when it is not primary installation
+
 2013-11-24 Jeremy Blosser <jblosser@sourcemage.org>
 	* python-pypi/viridian: new spell, ampache client in python
 
