--- a/python-pypi/xlwt/HISTORY
+++ b/python-pypi/xlwt/HISTORY
@@ -1,3 +1,7 @@
+2013-11-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.8.0
+	  use xlwt-future
+
 2013-04-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.7.5
 	* DEPENDS: fix python3 usage
