cgminer: new spell, multi-threaded multi-pool FPGA and ASIC miner for bitcoin

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-11-24  Ismael Luceno <ismael@sourcemage.org>
+	* net/cgminer: new spell, multi-threaded multi-pool FPGA and ASIC miner for bitcoin
+
 2013-11-20  Treeve Jelbert <treeve@sourcemage.org>
 	* FUNCTIONS,python-pypi/PY_DEPENDS: fix builds involving python3.3
 
