--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-11-24 Jeremy Blosser <jblosser@sourcemage.org>
+	* python-pypi/viridian: new spell, ampache client in python
+
 2013-11-24  Ismael Luceno <ismael@sourcemage.org>
 	* net/cgminer: new spell, multi-threaded multi-pool FPGA and ASIC miner for bitcoin
 
