--- a/qt5/qtbase/HISTORY
+++ b/qt5/qtbase/HISTORY
@@ -1,3 +1,6 @@
+2013-11-25  Treeve Jelbert <treeve@sourcemage.org>
+	* qtbase: update patch
+
 2013-11-17  Treeve Jelbert <treeve@sourcemage.org>
 	* CONFIGURE: remove demos, enable gif
 
