--- a/python-pypi/viridian/HISTORY
+++ b/python-pypi/viridian/HISTORY
@@ -1,3 +1,6 @@
+2013-11-25 Jeremy Blosser <jblosser@sourcemage.org>
+	* DEPENDS: libsoup, gst-plugins-good, pysqlite
+
 2013-11-24 Jeremy Blosser <jblosser@sourcemage.org>
 	* DEPENDS, DETAILS: spell created
 
