--- a/shell-term-fm/xfe/HISTORY
+++ b/shell-term-fm/xfe/HISTORY
@@ -1,3 +1,6 @@
+2013-11-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.37
+
 2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.35
 
