--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,5 +1,5 @@
 2013-11-26 Ladislav Hagara <hgr@vabo.cz>
-	* DETAILS: 1.6.1
+	* DETAILS: 1.6.1 & 1.7.7
 
 2013-11-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7.6 (devel)
