--- a/kde4-apps/clementine/HISTORY
+++ b/kde4-apps/clementine/HISTORY
@@ -1,2 +1,5 @@
+2013-11-26 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.2.1
+
 2013-10-15 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS, DEPENDS: spell created, version 1.2
