--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-11-26 Vlad Glagolev <stealth@sourcemage.org>
+	* php-pear/php-clamav: new spell, ClamAV Interface for PHP5 scripts
+
 2013-11-24  Treeve Jelbert <treeve@sourcemage.org>
 	* FUNCTIONS: fix for python2 usage when it is not primary installation
 
