--- a/utils/dmenu/HISTORY
+++ b/utils/dmenu/HISTORY
@@ -1,3 +1,6 @@
+2013-11-26 Ismael Luceno <ismael@sourcemage.org>
+	* CONFIGURE, DEPENDS, PRE_BUILD, dmenu-4.5-xft.diff: Xft fonts support
+
 2012-12-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.5
 
