--- a/xorg-lib/libxshmfence/HISTORY
+++ b/xorg-lib/libxshmfence/HISTORY
@@ -1,3 +1,6 @@
+2013-11-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1
+
 2013-11-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0
 	  spell created
