--- a/kernels/ndiswrapper/HISTORY
+++ b/kernels/ndiswrapper/HISTORY
@@ -1,3 +1,6 @@
+2013-11-29 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: upgrade to 1.59
+
 2013-02-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: upgrade to 1.58
 	* PRE_BUILD: dont't need patches
