--- a/net/iptables/HISTORY
+++ b/net/iptables/HISTORY
@@ -1,3 +1,6 @@
+2013-11-29 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.4.21
+
 2013-06-21 Remko van der Vossen <wich@sourcemage.org>
 	* DETAILS: 1.4.19.1
 
