--- a/python-pypi/alembic/HISTORY
+++ b/python-pypi/alembic/HISTORY
@@ -1,3 +1,6 @@
+2013-11-29 Treeve Jelbert <treeve@sourcemage.org> 
+	* DETAILS: version 0.6.1
+
 2013-07-20 Treeve Jelbert <treeve@sourcemage.org> 
 	* DETAILS: version 0.6.0
 
