--- a/kde4-apps/quassel/HISTORY
+++ b/kde4-apps/quassel/HISTORY
@@ -1,3 +1,6 @@
+2013-11-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.2
+
 2013-05-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.0
 
