--- a/libs/tbb/HISTORY
+++ b/libs/tbb/HISTORY
@@ -1,3 +1,7 @@
+2013-11-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 42_20131003
+	* INSTALL: fix
+
 2013-10-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 42_20130725
 
