--- a/devel/qt-creator/HISTORY
+++ b/devel/qt-creator/HISTORY
@@ -1,5 +1,8 @@
+2013-11-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: devel version 3.0.0-rc1
+
 2013-10-31 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
-	* DETAILS: devel version 3.0.0
+	* DETAILS: devel version 3.0.0-beta
 
 2013-08-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.8.1
