xdelta3: new spell, Diff program that works on binaries.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-11-30  Ismael Luceno <ismael@sourcemage.org>
+	* utils/xdelta3: new spell, Diff program that works on binaries.
+
 2013-11-24  Treeve Jelbert <treeve@sourcemage.org>
 	* FUNCTIONS: fix for python2 usage when it is not primary installation
 
