--- a/video-libs/libvpx/HISTORY
+++ b/video-libs/libvpx/HISTORY
@@ -1,3 +1,7 @@
+2013-12-01 Javier Vasquez <j.e.vasquez.v@gmail.com>
+	* DETAILS: 1.2.0
+	* BUILD: more build options
+
 2012-05-23 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.1.0
 
