--- a/gnome2-apps/gramps/HISTORY
+++ b/gnome2-apps/gramps/HISTORY
@@ -1,3 +1,6 @@
+2013-12-01Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS:  version 3.4.6
+
 2013-05-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS:  version 3.4.5
 
