--- a/net/slowhttptest/HISTORY
+++ b/net/slowhttptest/HISTORY
@@ -1,3 +1,6 @@
+2013-12-02 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.6
+
 2013-02-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.5; fixed long description wrap
 
