ChangeLog: e-17/emotion_generic_players added

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-12-02 Ladislav Hagara <hgr@vabo.cz>
+	* e-17/emotion_generic_players: new spell, Emotion Generic Players
+
 2013-11-30  Ismael Luceno <ismael@sourcemage.org>
 	* utils/xdelta3: new spell, Diff program that works on binaries.
 
