--- a/utils/smartmontools/HISTORY
+++ b/utils/smartmontools/HISTORY
@@ -1,3 +1,6 @@
+2013-12-02 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 6.2
+
 2012-12-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 6.0
 	* DEPENDS: added, for optional SELinux support
