--- a/utils/ipmitool/HISTORY
+++ b/utils/ipmitool/HISTORY
@@ -1,3 +1,7 @@
+2013-12-03 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.8.13
+	  Removed PATCHLEVEL
+
 2012-06-20 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* DEPENDS: added, for missing dependencies
