pspshrink: new spell, ISO Compressor for PSP games

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-12-03  Ismael Luceno <ismael@sourcemage.org>
+	* disk/pspshrink: new spell, ISO Compressor for PSP games
+
 2013-12-02 Ladislav Hagara <hgr@vabo.cz>
 	* e-17/emotion_generic_players: new spell, Emotion Generic Players
 
