--- a/devel/binutils/HISTORY
+++ b/devel/binutils/HISTORY
@@ -1,3 +1,6 @@
+2013-12-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.24
+
 2013-06-03 Vlad Glagolev <stealth@sourcemage.org>
 	* UP_TRIGGERS: added, to fix migration for spells that require libbfd
 
