--- a/xorg-util/util-macros/HISTORY
+++ b/xorg-util/util-macros/HISTORY
@@ -1,3 +1,6 @@
+2013-12-04  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.18.0
+
 2012-09-07  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.17.1
 
