--- a/xorg-driver/xf86-video-modesetting/HISTORY
+++ b/xorg-driver/xf86-video-modesetting/HISTORY
@@ -1,3 +1,6 @@
+2013-12-04 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS version 0.8.1
+
 2013-07-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: udev => UDEV
 
