--- a/graphics/imagemagick/HISTORY
+++ b/graphics/imagemagick/HISTORY
@@ -1,3 +1,7 @@
+2013-12-04 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 6.8.7-8
+	  switched to the xz-compressed tarball
+
 2013-11-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 6.8.7-5, fix source urls
 
