--- a/disk/dosfstools/HISTORY
+++ b/disk/dosfstools/HISTORY
@@ -1,3 +1,6 @@
+2013-12-04 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.0.24
+
 2013-10-15 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.0.23
 
