--- a/python-pypi/setuptools/HISTORY
+++ b/python-pypi/setuptools/HISTORY
@@ -1,3 +1,6 @@
+2013-12-04 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.4.2
+
 2013-11-24 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.4.1
 
