FUNCTIONS - fix typo

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-12-04  Treeve Jelbert <treeve@sourcemage.org>
+	* FUNCTIONS: fix PYTHON2 typo
+
 2013-12-03  Ismael Luceno <ismael@sourcemage.org>
 	* disk/pspshrink: new spell, ISO Compressor for PSP games
 
