--- a/database/dbd-firebird/HISTORY
+++ b/database/dbd-firebird/HISTORY
@@ -1,3 +1,6 @@
+2013-12-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.16
+
 2013-09-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.15
 
