--- a/python-pypi/fb-python/HISTORY
+++ b/python-pypi/fb-python/HISTORY
@@ -1,3 +1,6 @@
+2013-12-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.8.0
+
 2013-10-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.7.4
 
