--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2013-12-06 Ladislav Hagara <hgr@vabo.cz>
+	* latest.defaults: LATEST_maintenance_patches_3=patch-3.12.3
+	* info/patches/maintenance_patches_3/patch-3.12.3: added
+
 2013-11-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* info/patches/maintenance_patches_3/patch-3.12.2: added
 	* latest_defaults: version 3.12.2
