--- a/database/sqlite/HISTORY
+++ b/database/sqlite/HISTORY
@@ -1,3 +1,6 @@
+2013-12-06 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.8.2
+
 2013-10-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.8.1
 
