--- a/net/traceroute/HISTORY
+++ b/net/traceroute/HISTORY
@@ -1,3 +1,6 @@
+2013-12-06 Tommy Boatman <tboatman@sourcemage.org>
+	* DETAILS: 2.0.19
+
 2012-06-25 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.18
 
