--- a/xorg-app/xclock/HISTORY
+++ b/xorg-app/xclock/HISTORY
@@ -1,3 +1,6 @@
+2013-12-06 Tommy Boatman <tboatman@sourcemage.org>
+	* DETAILS: version 1.0.7
+
 2013-05-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.0.6
 
