--- a/shell-term-fm/dash/HISTORY
+++ b/shell-term-fm/dash/HISTORY
@@ -1,3 +1,6 @@
+2013-12-06 Tommy Boatman <tboatman@sourcemage.org>
+	* DETAILS: 0.5.7
+
 2011-02-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.5.6.1
 
