--- a/archive/sharutils/HISTORY
+++ b/archive/sharutils/HISTORY
@@ -1,3 +1,6 @@
+2013-12-06 Tommy Boatman <tboatman@sourcemage.org>
+	* DETAILS: version 4.14
+
 2013-01-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.13.3
 
