--- a/archive/unrar/HISTORY
+++ b/archive/unrar/HISTORY
@@ -1,3 +1,6 @@
+2013-12-06 Tommy Boatman <tboatman@sourcemage.org>
+	* DETAILS: updated to 5.0.14
+
 2012-05-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.2.1
 
