--- a/net/pingtunnel/HISTORY
+++ b/net/pingtunnel/HISTORY
@@ -1,3 +1,6 @@
+2013-12-06 Tommy Boatman <tboatman@sourcemage.org>
+	* DETAILS: version 0.72
+
 2009-03-09 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS, DEPENDS, BUILD: spell created, version 0.70
 
