--- a/science/avogadroapp/HISTORY
+++ b/science/avogadroapp/HISTORY
@@ -1,3 +1,6 @@
+2013-12-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.7.0
+
 2013-07-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.6.0
 	  spell created
