devel/qt-creator: ensure installation to /usr

--- a/devel/qt-creator/HISTORY
+++ b/devel/qt-creator/HISTORY
@@ -1,3 +1,6 @@
+2013-12-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* INSTALL: ensure installation to /usr
+
 2013-11-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: devel version 3.0.0-rc1
 
