--- a/disk/gpart/HISTORY
+++ b/disk/gpart/HISTORY
@@ -1,3 +1,8 @@
+2013-12-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.2.1
+	  new WEB_SITE & URL (now at github)
+	* BUILD: deleted
+
 2011-10-14 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap (scripted)
 
