--- a/net/minidlna/HISTORY
+++ b/net/minidlna/HISTORY
@@ -1,3 +1,7 @@
+2013-12-07 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 1.1.1
+
 2013-10-30 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.1.0
 	* PRE_BUILD, BUILD: Removed
