--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2013-12-09 Ladislav Hagara <hgr@vabo.cz>
+	* latest.defaults: LATEST_maintenance_patches_3=patch-3.12.4
+	* info/patches/maintenance_patches_3/patch-3.12.4: added
+
 2013-12-06 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: LATEST_maintenance_patches_3=patch-3.12.3
 	* info/patches/maintenance_patches_3/patch-3.12.3: added
