--- a/graphics-libs/freetype2/HISTORY
+++ b/graphics-libs/freetype2/HISTORY
@@ -1,3 +1,7 @@
+2013-12-09 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.5.2
+	* PRE_BUILD, ft2build.patch: updated
+
 2013-06-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.5.0.1
 
