--- a/python-pypi/fb-python/HISTORY
+++ b/python-pypi/fb-python/HISTORY
@@ -1,3 +1,6 @@
+2013-12-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.8.1
+
 2013-12-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.8.0
 
