--- a/python-pypi/sqlalchemy/HISTORY
+++ b/python-pypi/sqlalchemy/HISTORY
@@ -1,3 +1,6 @@
+2013-12-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.8.4
+
 2013-10-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.8.3
 
