--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-12-09 Ladislav Hagara <hgr@vabo.cz>
+	* python-pypi/python-efl: new spell, python bindings for EFL
+
 2013-12-04  Treeve Jelbert <treeve@sourcemage.org>
 	* FUNCTIONS: fix PYTHON2 typo
 
