--- a/video/mpv/HISTORY
+++ b/video/mpv/HISTORY
@@ -1,3 +1,6 @@
+2013-12-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.2.4
+
 2013-11-08 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.2.3
 
