--- a/audio-players/deadbeef/HISTORY
+++ b/audio-players/deadbeef/HISTORY
@@ -1,3 +1,8 @@
+2013-12-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.6.0
+	* CONFIGURE: added missing config options
+	* DEPENDS: re-enabled recent ffmpeg support
+
 2013-09-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: readability++; fixed libsndfile flags; added disable flag
 	  for disabled gtk+3 operation; added missing gettext and dbus optional
