--- a/lua-forge/lua/HISTORY
+++ b/lua-forge/lua/HISTORY
@@ -1,3 +1,6 @@
+2013-12-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.2.3
+
 2013-04-09 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS, lua.pc: 5.2.2
 
