nss-pam-ldapd: => 0.7.19

--- a/utils/nss-pam-ldapd/HISTORY
+++ b/utils/nss-pam-ldapd/HISTORY
@@ -1,3 +1,6 @@
+2013-12-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.7.19
+
 2013-02-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: this was a security update (CVE-2013-0288)
 
