--- a/video/guvcview/HISTORY
+++ b/video/guvcview/HISTORY
@@ -1,3 +1,6 @@
+2013-12-11 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.7.2
+
 2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: udev => UDEV
 
