--- a/xorg-proto/glproto/HISTORY
+++ b/xorg-proto/glproto/HISTORY
@@ -1,3 +1,6 @@
+2013-12-11  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.4.17
+
 2012-07-13  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.4.16
 
