--- a/video/vlc/HISTORY
+++ b/video/vlc/HISTORY
@@ -1,3 +1,6 @@
+2013-12-11 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.1.2
+
 2013-11-14 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.1.1
 	* PRE_BUILD, lua.patch, lua-scripts.patch: lua patches removed
