--- a/qt5/qtdeclarative/HISTORY
+++ b/qt5/qtdeclarative/HISTORY
@@ -1,3 +1,7 @@
+2013-12-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.2.0
+	* DEPENDS: remove qtjsbackend
+
 2013-09-03  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.1.1
 
