--- a/qt5/qtsvg/HISTORY
+++ b/qt5/qtsvg/HISTORY
@@ -1,3 +1,6 @@
+2013-12-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.2.0
+
 2013-09-03  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.1.1
 
