--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-12-12  Treeve Jelbert <treeve@sourcemage.org>
+	* qt5/qtserialport: new spell, serial port access for qt5
+
 2013-12-09 Ladislav Hagara <hgr@vabo.cz>
 	* python-pypi/python-efl: new spell, python bindings for EFL
 
