--- a/net/iw/HISTORY
+++ b/net/iw/HISTORY
@@ -1,3 +1,6 @@
+2013-12-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.13
+
 2013-10-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.11
 
