--- a/libs/libnl/HISTORY
+++ b/libs/libnl/HISTORY
@@ -1,3 +1,6 @@
+2013-12-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.2.23
+
 2013-05-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.2.22
 
