--- a/doc/enca/HISTORY
+++ b/doc/enca/HISTORY
@@ -1,3 +1,6 @@
+2012-12-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS version 1.15
+
 2012-12-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.14
 
