--- a/crypto/nss/HISTORY
+++ b/crypto/nss/HISTORY
@@ -1,3 +1,6 @@
+2013-12-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.15.3
+
 2013-10-29 David C. Haley <khoralin@gmail.com>
 	* DEPENDS: removed sqlite, zip; no longer appears needed
 
