--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,7 @@
+2013-12-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 26.0, SECURITY_PATCH++
+	* install_dir.patch: renewed
+
 2013-11-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 25.0.1, SECURITY_PATCH++
 
