--- a/devel/qt-creator/HISTORY
+++ b/devel/qt-creator/HISTORY
@@ -1,3 +1,6 @@
+2013-12-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: stable version 3.0.0
+
 2013-12-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* INSTALL: ensure installation to /usr
 
