--- a/devel/git/HISTORY
+++ b/devel/git/HISTORY
@@ -1,3 +1,6 @@
+2013-12-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.8.5.1
+
 2013-10-29 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.8.4.2
 
