--- a/mail/thunderbird/HISTORY
+++ b/mail/thunderbird/HISTORY
@@ -1,3 +1,6 @@
+2013-12-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 24.2.0, SECURITY_PATCH++
+
 2013-09-19 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 24.0
 	* mozconfig,PRE_BUILD,BUILD,INSTALL: Sync with firefox's setup, much better
