--- a/mail/thunderbird/HISTORY
+++ b/mail/thunderbird/HISTORY
@@ -1,5 +1,7 @@
 2013-12-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 24.2.0, SECURITY_PATCH++
+	* 0001-remove-version-number-from-thunderbird-s-installatio.patch,
+	  PRE_BUILD: remove version number from thunderbird's installation path
 
 2013-09-19 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 24.0
