--- a/disk/libburn/HISTORY
+++ b/disk/libburn/HISTORY
@@ -1,4 +1,7 @@
-2013-08=08 Treeve Jelbert <treeve@sourcemage.org>
+2013-12-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.4
+
+2013-08-08 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.3.2
 
 2013-06-01 Treeve Jelbert <treeve@sourcemage.org>
