--- a/disk/libisoburn/HISTORY
+++ b/disk/libisoburn/HISTORY
@@ -1,3 +1,6 @@
+2013-12-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.4
+
 2013-08-08 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.3.2
 
