--- a/python-pypi/lxml/HISTORY
+++ b/python-pypi/lxml/HISTORY
@@ -1,3 +1,6 @@
+2013-12-14 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.2.4
+
 2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.2.3
 
