--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,6 @@
+2013-12-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: 1.14.4
+
 2013-11-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 1.14.4
 	  SECURITY_PATCH++ fixes CVE-2013-4396
