--- a/python-pypi/pypdf2/HISTORY
+++ b/python-pypi/pypdf2/HISTORY
@@ -1,3 +1,8 @@
+2013-12-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.19
+	  url - use pypi
+	  update description
+
 2013-05-08 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.15
 	  spell created
