pyfpdf - fix build with python3

--- a/python-pypi/pyfpdf/HISTORY
+++ b/python-pypi/pyfpdf/HISTORY
@@ -1,3 +1,6 @@
+2013-12-15 Treeve Jelbert <treeve@sourcemage.org>
+	* PRE_BUILD: added, foruse when building with python3
+
 2013-04-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7
 	  spell created
