imagemagick: removed deprecated flag

--- a/graphics/imagemagick/HISTORY
+++ b/graphics/imagemagick/HISTORY
@@ -1,6 +1,7 @@
 2013-12-16 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 6.8.7-10; added legacy url for stable
 	  grimoire branch
+	* DEPENDS: dropped deprecated flag
 
 2013-12-04 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 6.8.7-8
