--- a/libs/pcre/HISTORY
+++ b/libs/pcre/HISTORY
@@ -1,3 +1,6 @@
+2013-12-16 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 8.34
+
 2013-05-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 8.33
 
