--- a/ruby-raa/ruby-1.9/HISTORY
+++ b/ruby-raa/ruby-1.9/HISTORY
@@ -1,3 +1,7 @@
+2013-12-17 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.9.3-p484; swapped ibiblio with CDN mirror;
+	  SECURITY_PATCH++ (CVE-2013-4164)
+
 2013-07-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.9.3-p448; SECURITY_PATCH++ (CVE-2013-4073)
 
