--- a/libs/libtasn1/HISTORY
+++ b/libs/libtasn1/HISTORY
@@ -1,3 +1,6 @@
+2013-12-17Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.4
+
 2012-12-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.2
 
