--- a/security/wireshark/HISTORY
+++ b/security/wireshark/HISTORY
@@ -1,3 +1,6 @@
+2013-12-18 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.10.4, SECURITY_PATCH=47
+
 2013-11-04 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.10.3, SECURITY_PATCH=46
 
