php: => 5.4.23 (stable) [security]

--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,7 @@
+2013-12-18 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.4.23 (stable); SECUIRTY_PATCH++ (several
+	  CVEs)
+
 2013-10-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: fixed spell bug for building regular mysql module for legacy
 	  branch
