--- a/utils/coreutils/HISTORY
+++ b/utils/coreutils/HISTORY
@@ -1,3 +1,6 @@
+2013-12-18 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 8.22
+
 2013-02-16 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 8.21
 
