--- a/libs/geoip/HISTORY
+++ b/libs/geoip/HISTORY
@@ -1,3 +1,6 @@
+2013-12-19 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.6.0
+
 2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.5.1
 	* PRE_BUILD: dropped
