--- a/php-pear/xcache/HISTORY
+++ b/php-pear/xcache/HISTORY
@@ -1,3 +1,6 @@
+2013-12-19 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.1.0; updated description
+
 2013-06-19 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.0.3
 
