--- a/archive-libs/libzip/HISTORY
+++ b/archive-libs/libzip/HISTORY
@@ -1,3 +1,6 @@
+2013-12-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.11.1
+
 2013-04-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.11.1
 
