--- a/disk/partclone/HISTORY
+++ b/disk/partclone/HISTORY
@@ -1,3 +1,6 @@
+2013-12-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.2.68
+
 2013-07-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.2.66
 
