lighttpd: added patches to use custom ldap port in authentication module

--- a/http/lighttpd/HISTORY
+++ b/http/lighttpd/HISTORY
@@ -1,3 +1,11 @@
+2013-12-20 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: use SPELL variable
+	* CONFIGURE: added option for ability specify a custom ldap port in
+	  config file
+	* PRE_BUILD: apply patches
+	* auth_ldap_port-option{,+ext}.patch: added, to add custom ldap port
+	  option
+
 2013-09-28 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.4.33
 
