--- a/doc/pstoedit/HISTORY
+++ b/doc/pstoedit/HISTORY
@@ -1,3 +1,6 @@
+2013-12-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.62
+
 2013-01-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.61
 
