--- a/doc/pstotext/HISTORY
+++ b/doc/pstotext/HISTORY
@@ -1,3 +1,8 @@
+2013-12-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.9
+	  new website & url
+	* DEPENDS: ghostscript
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed MAINTAINER.
 
