--- a/graphics-libs/cimg/HISTORY
+++ b/graphics-libs/cimg/HISTORY
@@ -1,3 +1,6 @@
+2013-12-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.5.7
+
 2013-02-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.5.4
 
