xml-parser-expat: => 2.42_01

--- a/perl-cpan/xml-parser-expat/HISTORY
+++ b/perl-cpan/xml-parser-expat/HISTORY
@@ -1,3 +1,6 @@
+2013-12-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.42_01
+
 2012-05-25 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.41; renewed source url
 	* CONFLICTS: conflicts with duplicate spell
