--- a/perl-cpan/lwp/HISTORY
+++ b/perl-cpan/lwp/HISTORY
@@ -1,3 +1,6 @@
+2013-12-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 6.05
+
 2012-09-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: add dependencies on http-message, encode-locale,
 	  http-cookies, http-date, http-negotiate, lwp-mediatypes
