--- a/perl-cpan/file-next/HISTORY
+++ b/perl-cpan/file-next/HISTORY
@@ -1,3 +1,6 @@
+2013-12-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.12
+
 2012-09-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.10
 
