--- a/perl-cpan/html-parser/HISTORY
+++ b/perl-cpan/html-parser/HISTORY
@@ -1,3 +1,6 @@
+2013-12-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.71
+
 2012-05-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.69
 
