kernels/linux: version 3.12.6

--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2013-12-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* info/patches/maintenance_patches_3/patch-3.12.6: added
+	* latest_defaults: version 3.12.6
+
 2013-12-12 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: LATEST_maintenance_patches_3=patch-3.12.5
 	* info/patches/maintenance_patches_3/patch-3.12.5: added
