--- a/crypto/gnutls/HISTORY
+++ b/crypto/gnutls/HISTORY
@@ -1,3 +1,6 @@
+2013-12-21 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 3.2.8
+
 2013-11-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 3.2.7
 
