--- a/gnome2-libs/librsvg2/HISTORY
+++ b/gnome2-libs/librsvg2/HISTORY
@@ -1,3 +1,6 @@
+2013-12-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: 2.40.1
+
 2013-11-07 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.40.0
 
