--- a/x11/x2goclient/HISTORY
+++ b/x11/x2goclient/HISTORY
@@ -1,3 +1,6 @@
+2013-12-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 4.0.1.2
+
 2013-04-11 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD, DEPENDS, DETAILS, INSTALL: spell created
 
