--- a/haskell/haskell-git-annex/HISTORY
+++ b/haskell/haskell-git-annex/HISTORY
@@ -1,3 +1,6 @@
+2013-12-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 5.20131221
+
 2013-12-13 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 5.20131213
 
