--- a/x11-toolkits/gtk+3/HISTORY
+++ b/x11-toolkits/gtk+3/HISTORY
@@ -1,3 +1,6 @@
+2013-12-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.8.8
+
 2013-09-15 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.8.4
 
