gimp: added PRE_BUILD to fix freetype2 header path

--- a/graphics/gimp/HISTORY
+++ b/graphics/gimp/HISTORY
@@ -1,3 +1,6 @@
+2013-12-21 Robin Cook <rcook@wyrms.net>
+	* PRE_BUILD: added to fix freetype2 header path
+
 2013-11-29 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.8.10
 
