--- a/libs/fribidi/HISTORY
+++ b/libs/fribidi/HISTORY
@@ -1,3 +1,6 @@
+2013-12-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.19.6
+
 2012-12-31 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.19.5
 
