video/minitube: version 2.1.5

--- a/video/minitube/HISTORY
+++ b/video/minitube/HISTORY
@@ -1,3 +1,8 @@
+2013-12-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.1.5
+	* PRE_BUILD, 0001-remove-reference-to-missing-translations.patch:
+	  remove reference to missing translations to avoid build error
+
 2013-02-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: fixed hashsum. The tarball changed, changes do not
 	  appear to be dangerous, merely upstream too lazy to bump
