--- a/xorg-lib/libxcb/HISTORY
+++ b/xorg-lib/libxcb/HISTORY
@@ -1,3 +1,6 @@
+2013-12-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.10
+
 2013-11-10 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: 1.9
 	* PRE_BUILD: fixed the fix :)
