--- a/net/ipset/HISTORY
+++ b/net/ipset/HISTORY
@@ -1,3 +1,11 @@
+2013-12-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 6.20.1 (2.6 branch)
+	* BUILD: dropped deprecated autogen.sh run; use IPSET_OPTS
+	* FINAL: added, to run depmod for registering modules
+	* CONFIGURE: added, to choose modules compilation
+	* PREPARE: added, to detect ip_set kernel module for 2.6 branch and
+	  default answer in CONFIGURE
+
 2012-05-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 6.12.1
 
