--- a/net/ipset/INSTALL
+++ b/net/ipset/INSTALL
@@ -2,5 +2,8 @@ if [[ ${VERSION/.*} == 4 ]]; then
   make PREFIX="$INSTALL_ROOT/usr" install
 else
   default_install &&
-  make modules_install
+
+  if list_find "$IPSET_OPTS" "--with-kmod"; then
+    make modules_install
+  fi
 fi
