ipset: added HISTORY entry

--- a/net/ipset/HISTORY
+++ b/net/ipset/HISTORY
@@ -5,6 +5,7 @@
 	* CONFIGURE: added, to choose modules compilation
 	* PREPARE: added, to detect ip_set kernel module for 2.6 branch and
 	  default answer in CONFIGURE
+	* PRE_BUILD: replaced sed with sedit
 
 2012-05-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 6.12.1
