graphics-libs/libwebp: version 0.3.1

--- a/graphics-libs/libwebp/HISTORY
+++ b/graphics-libs/libwebp/HISTORY
@@ -1,3 +1,6 @@
+2013-12-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.3.1
+
 2012-11-24 Robin Cook <rcook@wyrms.net>
 	* New Spell: DETAILS, DEPENDS
 
