--- a/net/ssocks/HISTORY
+++ b/net/ssocks/HISTORY
@@ -1,5 +1,6 @@
 2013-12-24 Ismael Luceno <ismael@sourcemage.org>
 	* BUILD: Fix LIBS, must include -lcrypto with -lssl
+	* DETAILS: updated spell to 0.0.14
 
 2013-02-07 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.0.13
