--- a/science-libs/avogadrolibs/HISTORY
+++ b/science-libs/avogadrolibs/HISTORY
@@ -1,3 +1,7 @@
+2013-12-25 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.7.2
+	  use sourceforge
+
 2013-12-07 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.7.0
 
