openssh: Remove conflict with dropbear

--- a/crypto/openssh/HISTORY
+++ b/crypto/openssh/HISTORY
@@ -1,3 +1,6 @@
+2013-12-26 Ismael Luceno <ismael@sourcemage.org>
+	* CONFLICTS: doesn't conflict with dropbear
+
 2013-11-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 6.4p1, SECURITY_PATCH=7
 	  http://www.openssh.com/txt/gcmrekey.adv
