tzdata - fix install

--- a/libs/tzdata/INSTALL
+++ b/libs/tzdata/INSTALL
@@ -1,8 +1,7 @@
 cd $SOURCE_DIRECTORY &&
 
 TIMEZONES=('africa' 'antarctica' 'asia' 'australasia' 'backward' 'etcetera' \
-           'europe' 'factory' 'northamerica' 'pacificnew' 'solar87'         \
-           'solar88' 'solar89' 'southamerica' 'systemv')
+           'europe' 'factory' 'northamerica' 'pacificnew' 'southamerica' 'systemv')
 
 # Remove files that should be hard linked, in case they are not
 if [ -d ${INSTALL_ROOT}/usr/share/zoneinfo ]; then
@@ -20,7 +19,7 @@ zic -y ./yearistype -d ${INSTALL_ROOT}/usr/share/zoneinfo/right -L leapseconds $
 #If you want POSIX compatibility, use "America/New_York".
 zic -y ./yearistype -d ${INSTALL_ROOT}/usr/share/zoneinfo -p America/New_York                  &&
 
-install -m444 -t ${INSTALL_ROOT}/usr/share/zoneinfo iso3166.tab zone.tab
+install -m444 -t ${INSTALL_ROOT}/usr/share/zoneinfo iso3166.tab zone.tab &&
 
 if [ $SET_LOCALTIME == "y" ]; then
   if [ -z "$LOCAL_TIMEZONE" ]; then
