--- a/libs/tzdata/HISTORY
+++ b/libs/tzdata/HISTORY
@@ -1,3 +1,7 @@
+2013-12-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1
+	* INSTALL: remove solar*, add some missing &&
+
 2013-12-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2013i
 
