haskell/haskell-git-annex: version 5.20131230

--- a/haskell/haskell-git-annex/HISTORY
+++ b/haskell/haskell-git-annex/HISTORY
@@ -1,3 +1,8 @@
+2013-12-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 5.20131230
+	* PRE_BUILD, 0001-add-dependency-on-stm.patch: fix dependency
+	  on stm
+
 2013-12-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 5.20131221
 
