audio-players/cantata: version 1.2.1

--- a/audio-players/cantata/HISTORY
+++ b/audio-players/cantata/HISTORY
@@ -1,3 +1,6 @@
+2014-01-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.2.1
+
 2013-05-31 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD, DEPENDS, DETAILS: spell created
 
