--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-01-02  Treeve Jelbert <treeve@sourcemage.org>
+	* python-pypi/isort: new spell, sort python imports
+
 2013-12-25  Treeve Jelbert <treeve@sourcemage.org>
 	* ruby-raa/ruby-2.1: new spell
 
