chat-libs/loudmouth: prevent build error due to use of deprecated symbols

--- a/chat-libs/loudmouth/HISTORY
+++ b/chat-libs/loudmouth/HISTORY
@@ -1,3 +1,6 @@
+2014-01-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* BUILD: disable compiler error
+
 2013-02-03 Sukneet Basuta <sukneet@sourcemage.org>
 	* PRE_BUILD: added, run autoconf so it links to gobject correctly
 
