chat-im/mcabber: fix build with libotr >= 4.0.0

--- a/chat-im/mcabber/HISTORY
+++ b/chat-im/mcabber/HISTORY
@@ -1,3 +1,6 @@
+2014-01-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS, PRE_BUILD, mcabber_use_libotr4.patch: fix build with libotr >= 4.0.0
+
 2013-01-16 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.10.2; updated source urls; disabled
 	  doc-duplicating; added example config installation; cleaned up
