--- a/audio-creation/mhwaveedit/HISTORY
+++ b/audio-creation/mhwaveedit/HISTORY
@@ -1,3 +1,6 @@
+2014-01-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4.23
+
 2012-08-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.4.22
 	* PRE_BUILD, alsa.patch: dropped, fixed by upstream
