audio-players/mpc: version 0.24

--- a/audio-players/mpc/HISTORY
+++ b/audio-players/mpc/HISTORY
@@ -1,3 +1,6 @@
+2014-01-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.24
+
 2012-02-15 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.22; quoting paths
 
