libs/openscenegraph: version 3.2.0

--- a/libs/openscenegraph/HISTORY
+++ b/libs/openscenegraph/HISTORY
@@ -1,3 +1,8 @@
+2014-01-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.2.0
+	* DEPENDS: switch dependency on ffmpeg from legacy to stable
+	* PRE_BUILD, video_out_rgb.c.patch: removed obsolete patch
+
 2012-12-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* PRE_BUILD, video_out_rgb.c.patch: add patch from gentoo to fix
 	  compile error with recent versions of xine-lib
