audio-players/mpd: version 0.18.6

--- a/audio-players/mpd/HISTORY
+++ b/audio-players/mpd/HISTORY
@@ -1,3 +1,10 @@
+2014-01-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.18.6
+	* DEPENDS: depend on stable version of ffmpeg if ffmpeg is selected,
+	  remove optional dependency on libmpcdec since our libmpcdec is
+	  incompatible with mpd
+	* BUILD: forcibly disable dependency on libmpcdec to prevent build error
+
 2013-08-31 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD: fix library search path so libresid-builder is found
 
