libs/libcdio: version 0.92

--- a/libs/libcdio/HISTORY
+++ b/libs/libcdio/HISTORY
@@ -1,3 +1,6 @@
+2014-01-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.92
+
 2013-02-24 Vlad Glagolev <stealth@sourcemage.org>
 	* UP_TRIGGERS: added, for proper update process
 
