video/mpv: version 0.3.1

--- a/video/mpv/HISTORY
+++ b/video/mpv/HISTORY
@@ -1,3 +1,9 @@
+2014-01-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.3.1
+	* BUILD: use legacy configure script and Makefile
+	* DEPENDS: remove optional dependencies on gettext, libmng,
+	  add optional dependency on libdvdnav
+
 2013-12-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.2.4
 
