devel/cppcheck: version 1.63

--- a/devel/cppcheck/HISTORY
+++ b/devel/cppcheck/HISTORY
@@ -1,3 +1,6 @@
+2014-01-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.63
+
 2013-11-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.62
 
