--- a/graphics-libs/giflib/HISTORY
+++ b/graphics-libs/giflib/HISTORY
@@ -1,3 +1,6 @@
+2014-01-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.2.3
+
 2008-07-12 Vlad Glagolev <stealth@sourcemage.org>
 	* PROVIDES: removed, useless since deprecation of libungif
 
