--- a/doc/itstool/HISTORY
+++ b/doc/itstool/HISTORY
@@ -1,3 +1,7 @@
+2014-01-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.0.2
+	* DEPENDS: python => PYTHON, add libxml2
+
 2012-11-04 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.2.0
 
