kernels/linux: add support for xz compressed files

--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,6 @@
+2014-01-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* PRE_BUILD: add support for xz compressed files
+
 2013-12-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* info/patches/maintenance_patches_3/patch-3.12.6: added
 	* latest_defaults: version 3.12.6
