--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,6 @@
+2014-01-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.4.24 (stable)
+
 2014-01-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.3.28 (previous); SECUIRTY_PATCH++
 	  (CVE-2013-4073, CVE-2013-6420)
