mdp: new spell, simplified password manager

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-01-11 Vlad Glagolev <stealth@sourcemage.org>
+	* utils/mdp: new spell, simplified password manager
+
 2014-01-11 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* utils/zeroxml: new spell, a lightweight xml abstraction layer
 
