valknut - is qt4 only

--- a/ftp/valknut/HISTORY
+++ b/ftp/valknut/HISTORY
@@ -1,3 +1,6 @@
+2014-01-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS, BUILD: can only depend on qt4
+
 2010-09-19 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated to 0.4.9, fixed SOURCE_URL and WEB_SITE
 	  removed UPDATED and BUILD_API=2
