--- a/disk/udisks2/HISTORY
+++ b/disk/udisks2/HISTORY
@@ -1,3 +1,6 @@
+2014-01-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.1.2
+
 2013-10-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: add optional gettext
 	  fix unknown --enable-man-pages
