glances: requires psutil

--- a/utils/glances/HISTORY
+++ b/utils/glances/HISTORY
@@ -1,3 +1,6 @@
+2013-01-14 Tommy Boatman <tboatman@sourcemage.org>
+	* DEPENDS: requires psutil to prevent runtime error
+
 2012-07-20 Tommy Boatman <tboatman@sourcemage.org>
 	* DETAILS: 1.4
 	* DEPENDS: now requires some SETUPTOOLS
