video/mpv: version 0.3.2

--- a/video/mpv/HISTORY
+++ b/video/mpv/HISTORY
@@ -1,3 +1,6 @@
+2014-01-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.3.2
+
 2014-01-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.3.1
 	* BUILD: use legacy configure script and Makefile
