--- a/antivirus/clamav/HISTORY
+++ b/antivirus/clamav/HISTORY
@@ -1,3 +1,6 @@
+2014-01-16 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.98.1
+
 2013-09-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.98
 	* INSTALL: use make_single to avoid a race when installing manpages
