--- a/http/midori/HISTORY
+++ b/http/midori/HISTORY
@@ -1,3 +1,6 @@
+2014-01-16 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.5.7
+
 2013-11-20 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.5.6
 	* BUILD, INSTALL: waf -> cmake
