nfs-utils: NFSv4 support requires sqlite
configure: error: nfsdcltrack requires sqlite-devel

--- a/net/nfs-utils/HISTORY
+++ b/net/nfs-utils/HISTORY
@@ -1,3 +1,6 @@
+2014-01-16 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: NFSv4 support requires sqlite
+
 2013-09-17 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Fix SOURCE_URL for duplicate '/' causing 404
 
