--- a/disk/dosfstools/HISTORY
+++ b/disk/dosfstools/HISTORY
@@ -1,3 +1,6 @@
+2014-01-18 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.0.25
+
 2013-12-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.0.24
 
