par2cmdline-tbb: => 0.4-tbb-20100203

--- a/archive/par2cmdline-tbb/HISTORY
+++ b/archive/par2cmdline-tbb/HISTORY
@@ -1,2 +1,9 @@
+2014-01-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.4-tbb-20100203
+	* DEPENDS: only need tbb
+	* BUILD: force -std=c++11
+	* PRE_BUILD,syntax.patch.gz: added
+	  it now compiles with gcc-4.8.2
+
 2009-09-25 David Kowis<dkowis@shlrm.org>
 	* DETAILS, BUILD, DEPENDS: created multi-core par2cmdline spell
