docbook-utils: apply patch to work with new grep

--- a/doc/docbook-utils/HISTORY
+++ b/doc/docbook-utils/HISTORY
@@ -1,3 +1,7 @@
+2013-01-15 Robin Cook <rcook@wyrms.net>
+	* PRE_BUILD: added to apply fix for new grep
+	* DEPENDS: changed jadetex to texlive
+
 2006-10-26 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* INSTALL: use TRACK_ROOT when linking #9163
 
