--- a/ftp/wget/HISTORY
+++ b/ftp/wget/HISTORY
@@ -1,3 +1,8 @@
+2014-01-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.15
+	* PRE_BUILD, wget-1.14-perl-5.18-pod-fixes.diff: deleted
+	* wget.gpg: add  E163E1EA: Giuseppe Scrivano <gscrivan@redhat.com>
+
 2013-05-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* PRE_BUILD, wget-1.14-perl-5.18-pod-fixes.diff: add fix for
 	  bug #546
