--- a/http/lighttpd/HISTORY
+++ b/http/lighttpd/HISTORY
@@ -1,3 +1,7 @@
+2014-01-21 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4.34; SECURITY_PATCH++
+	  (CVE-2013-4508, CVE-2013-4559, CVE-2013-4560)
+
 2013-12-20 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: use SPELL variable
 	* CONFIGURE: added option for ability specify a custom ldap port in
