science-libs/netcdf: version 4.3.1

--- a/science-libs/netcdf/HISTORY
+++ b/science-libs/netcdf/HISTORY
@@ -1,3 +1,6 @@
+2014-01-23 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 4.3.1, remove note wrt missing hdf5
+
 2012-05-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: added optional dependencies on doxygen, hdf5, hdf4 and zlib
 	* DETAILS: version 4.2
