libs/cfitsio: version 3360

--- a/libs/cfitsio/HISTORY
+++ b/libs/cfitsio/HISTORY
@@ -1,3 +1,6 @@
+2014-01-23 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3360
+
 2012-05-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3300
 
