--- a/xorg-driver/glamor/HISTORY
+++ b/xorg-driver/glamor/HISTORY
@@ -1,2 +1,7 @@
+2014-01-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.6.0
+	  this is probably the last satndalone release
+	* PRE_BUILD, PREPARE: deleted
+
 2013-09-22 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS, DEPENDS, PREPERE, PRE_BUILD: spell created
