--- a/utils/iso-codes/HISTORY
+++ b/utils/iso-codes/HISTORY
@@ -1,3 +1,6 @@
+2014-01-24 Tommy Boatman <tboatman@sourcemage.org>
+	* DETAILS: version 3.50
+
 2013-10-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.47
 
