fltk: change download URL to fltk.org

--- a/x11-toolkits/fltk/HISTORY
+++ b/x11-toolkits/fltk/HISTORY
@@ -1,3 +1,6 @@
+2014-01-24 Tommy Boatman <tboatman@sourcemage.org>
+	* DETAILS: download website to fltk.org
+
 2013-02-23 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* SUB_DEPENDS, PRE_SUB_DEPENDS: added sub dependency on OPENGL
 
