video/mpv: version 0.3.3

--- a/video/mpv/HISTORY
+++ b/video/mpv/HISTORY
@@ -1,3 +1,6 @@
+2014-01-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.3.3
+
 2014-01-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.3.2
 
