create a group for kde5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2014-01-13  Treeve Jelbert <treeve@sourcemage.org>
 	* devel/qxmledit: Qt4/5 XML editor
+	* groups: add kde5
 
 2014-01-24 Ismael Luceno <ismael@sourcemage.org>
         * graphics-libs/openglut: spell deprecated [Development of OpenGLUT
