claws-mail: updated to 3.9.3

--- a/mail/claws-mail/HISTORY
+++ b/mail/claws-mail/HISTORY
@@ -1,3 +1,7 @@
+2014-01-26 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated to 3.9.3
+	* DEPENDS: updated to new depends
+
 2013-09-02 Robin Cook <rcook@wyrms.net>
 	* CONFIGURE: added additional configure options
 	* DEPENDS: added additional optional depends
